solve selection on ios

--- a/src/app/components/game/game.component.sass
+++ b/src/app/components/game/game.component.sass
@@ -95,7 +95,7 @@
       box-shadow: 0px 2px rgba(235, 93, 87, 0.1333333333)
       transition: all 500ms cubic-bezier(1.000, 0.015, 0.290, 1.800)
       transition-timing-function: cubic-bezier(1.000, 0.015, 0.290, 1.800)
-    button:focus
+    button.selected
       border: 2px solid rgba(235, 93, 87, 1)
       box-shadow: 0px 0px rgba(235, 93, 87, 1)
       transform: translateY(2px)
